[gd_scene load_steps=14 format=3 uid="uid://3lwxdd46t6b4"]

[ext_resource type="Script" uid="uid://bfgqm7gbk1y3y" path="res://escenas/sc_seleccion/seleccion_p.gd" id="1_28arp"]
[ext_resource type="Texture2D" uid="uid://mg7rcn3q8qns" path="res://assets/ui/seleccionar personaje/background_selec.png" id="2_t7f3v"]
[ext_resource type="Texture2D" uid="uid://eimfl5ftybob" path="res://assets/ui/seleccionar personaje/title_select_c.png" id="3_gbhhd"]
[ext_resource type="Texture2D" uid="uid://dqbarydlo31dd" path="res://assets/ui/seleccionar personaje/right.png" id="4_fa2c7"]
[ext_resource type="Texture2D" uid="uid://dqbybhh8g5e3n" path="res://assets/ui/seleccionar personaje/left.png" id="5_lumy3"]
[ext_resource type="Texture2D" uid="uid://cyu5w1bikucjj" path="res://assets/ui/seleccionar personaje/btn_accept.png" id="6_psvml"]
[ext_resource type="Texture2D" uid="uid://bspu1nedr8qne" path="res://assets/ui/seleccionar personaje/boy.png" id="7_uq6os"]
[ext_resource type="FontFile" uid="uid://cib6qexrq4571" path="res://assets/fonts/Libre_Franklin/static/LibreFranklin-SemiBold.ttf" id="8_gbhhd"]
[ext_resource type="Texture2D" uid="uid://haxgl2pe7cuq" path="res://assets/ui/seleccionar personaje/input2.png" id="8_t7f3v"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gbhhd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fa2c7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t7f3v"]
bg_color = Color(0.791951, 0.791951, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gbhhd"]
content_margin_left = 30.0
texture = ExtResource("8_t7f3v")
expand_margin_top = 21.0

[node name="SeleccionP" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_28arp")

[node name="rect_background" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -31.0
offset_top = -19.0
offset_right = 1335.0
offset_bottom = 749.0
texture = ExtResource("2_t7f3v")

[node name="rect_title" type="TextureRect" parent="rect_background"]
layout_mode = 0
offset_left = 360.0
offset_top = 25.0
offset_right = 995.0
offset_bottom = 165.0
texture = ExtResource("3_gbhhd")

[node name="boy" type="TextureRect" parent="rect_background"]
layout_mode = 0
offset_top = -68.0
offset_right = 1366.0
offset_bottom = 700.0
texture = ExtResource("7_uq6os")

[node name="btn_right" type="Button" parent="rect_background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.872
anchor_right = 0.5
anchor_bottom = 0.872
offset_left = 178.0
offset_top = -401.696
offset_right = 281.0
offset_bottom = -288.696
theme_override_styles/hover = SubResource("StyleBoxFlat_gbhhd")
icon = ExtResource("4_fa2c7")
flat = true

[node name="btn_left" type="Button" parent="rect_background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.872
anchor_right = 0.5
anchor_bottom = 0.872
offset_left = -287.0
offset_top = -393.696
offset_right = -177.0
offset_bottom = -278.696
theme_override_styles/hover = SubResource("StyleBoxFlat_fa2c7")
icon = ExtResource("5_lumy3")
flat = true

[node name="btn_accept" type="Button" parent="rect_background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.872
anchor_right = 0.5
anchor_bottom = 0.872
offset_left = -133.0
offset_top = -50.696
offset_right = 164.0
offset_bottom = 69.304
theme_override_styles/hover = SubResource("StyleBoxFlat_t7f3v")
icon = ExtResource("6_psvml")
flat = true

[node name="TextEdit" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 434.0
offset_top = 498.0
offset_right = 877.0
offset_bottom = 614.0
theme_override_colors/font_placeholder_color = Color(0.381888, 0.345412, 0.229974, 1)
theme_override_colors/font_color = Color(0.220467, 0.197197, 0.123221, 1)
theme_override_constants/line_spacing = 30
theme_override_fonts/font = ExtResource("8_gbhhd")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxTexture_gbhhd")
scroll_smooth = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]
